--- a/roles/qpid/tasks/main.yaml
+++ b/roles/qpid/tasks/main.yaml
@@ -6,7 +6,7 @@
       shell:
         cmd: /opt/apigee/apigee-setup/bin/setup.sh -p qs -f /tmp/apigee/config.conf
   when: 
-    - inventory_hostname in groups.analytics
+    - inventory_hostname in groups.qpid
   tags:
     - install_all
-    - analytics
+    - qpid
