--- a/roles/prepare/tasks/main.yaml
+++ b/roles/prepare/tasks/main.yaml
@@ -1,7 +1,36 @@
 ---
 - name: prepare
   block:
-        
+
+    - name: install python
+      dnf:
+        name:
+          - python39
+          - python39-pip
+          - python39-setuptools
+          - python2
+          - python2-pip
+        state: present
+
+    # - name: remove old links
+    #   file:
+    #     name: "{{ item }}"
+    #     state: absent
+    #   with_items:
+    #     - /usr/bin/python3
+    #     - /usr/bin/pip3
+    #     - usr/bin/python
+
+    - name: create new links
+      file:
+        dest: "{{ item.dest }}"
+        src: "{{ item.src }}"
+        state: link
+        force: true
+      loop:
+        - { dest: /usr/bin/python3, src: /usr/bin/python3.9 }
+        - { dest: /usr/bin/python, src: /usr/bin/python2.7 }
+
     - name: update os
       yum:
         name: "*"
@@ -33,18 +62,20 @@
 
     - name: install epel repo
       yum:
-        name: oracle-epel-release-el7
+        name: oracle-epel-release-el8
         state: present
 
     - name: install packages
       yum:
         name: 
           - bind-utils
-          - python3
+          - lsof
+          - tcpdump
         state: present
 
-    - name: install python modules
+    - name: update oip and setuptools
       pip:
+        executable: /usr/bin/pip3
         name:
           - pip
           - setuptools
@@ -52,6 +83,7 @@
 
     - name: install python modules
       pip:
+        executable: /usr/bin/pip3
         name:
           - cryptography
         state: latest
@@ -71,6 +103,36 @@
         name: apigee
         uid: 500
         group: apigee
+
+    # - name: install java
+    #   yum:
+    #     name: java-1.8.0-openjdk
+    #     state: present
+
+    # - name: get bootstrap file
+    #   get_url:
+    #     url: "https://software.apigee.com/bootstrap_{{ apigee_version }}.sh"
+    #     dest: /tmp
+
+    # - name: initial install
+    #   shell:
+    #     cmd: bash /tmp/bootstrap_{{ apigee_version }}.sh apigeeuser=bundesk apigeepassword=oQfPmaY1F0RZ4fsi
+
+    # - name: install setup util
+    #   shell:
+    #     cmd: /opt/apigee/apigee-service/bin/apigee-service apigee-setup install
+
+    # - name: add missing option to apigee repo
+    #   ini_file:
+    #     path: /etc/yum.repos.d/apigee.repo
+    #     section: "{{ item }}"
+    #     option: module_hotfixes
+    #     value: 1
+    #   with_items:
+    #     - "apigee-$apigeestage"
+    #     - "apigee-thirdparty"
+
+
   when:
     -  inventory_hostname in groups.apigee
 
