--- a/roles/prepare/tasks/main.yaml
+++ b/roles/prepare/tasks/main.yaml
@@ -12,14 +12,13 @@
           - python2-pip
         state: present
 
-    # - name: remove old links
-    #   file:
-    #     name: "{{ item }}"
-    #     state: absent
-    #   with_items:
-    #     - /usr/bin/python3
-    #     - /usr/bin/pip3
-    #     - usr/bin/python
+    - name: remove old links
+      file:
+        name: "{{ item }}"
+        state: absent
+      with_items:
+        - /usr/bin/python3
+        - /usr/bin/python
 
     - name: create new links
       file:
@@ -28,8 +27,8 @@
         state: link
         force: true
       loop:
-        - { dest: /usr/bin/python3, src: /usr/bin/python3.9 }
-        - { dest: /usr/bin/python, src: /usr/bin/python2.7 }
+        - { src: /usr/bin/python3.9, dest: /usr/bin/python3 }
+        - { src: /usr/bin/python2.7, dest: /usr/bin/python }
 
     - name: update os
       yum:
